# brdb

./: .gitignore  Cargo.toml  README.md
crates/brdb/: Cargo.toml  README.md
crates/brdb/examples/: brdb_to_brz.rs  brz_to_brdb.rs  brz_to_brz.rs  read_brz.rs  read_sqlite_schema.rs  read_wire_ports.rs  read_world.rs  world_freeze_entities.rs  world_move_bricks.rs  world_owner_counts.rs  world_owner_tool.rs  world_remove_shadows.rs  world_replace_bundle.rs  world_replace_owner.rs  write_brick.rs  write_brz.rs  write_entity.rs  write_wire.rs
crates/brdb/src/: compression.rs  errors.rs  fs.rs  helpers.rs  lib.rs  pending.rs  pending_tests.rs  plaintext.lalrpop  plaintext.rs  tables.rs
crates/brdb/src/assets/: bricks.rs  entities.rs  literal_component.rs  materials.rs  mod.rs
crates/brdb/src/assets/gates/: buffer.rs  logic.rs  mod.rs  rerouter.rs
crates/brdb/src/brdb/: brdb.sql  errors.rs  mod.rs  reader.rs
crates/brdb/src/brz/: errors.rs  mod.rs  reader.rs  tests.rs
crates/brdb/src/reader/: mod.rs  reader_trait.rs
crates/brdb/src/schema/: as_brdb.rs  global_data.rs  intern.rs  mod.rs  read.rs  value.rs  write.rs
crates/brdb/src/tests/: mod.rs
crates/brdb/src/wrapper/: bits.rs  brick.rs  bstring.rs  common.rs  components.rs  entities.rs  meta.rs  mod.rs  owners.rs  position.rs  save.rs  schemas.rs  wire.rs  world.rs
