[package]
name = "brdb"
version = "0.0.0"
authors = ["Isaac <gpg@reheatedcake.io>"]
description = "A library for reading and writing Brickadia's World files."
edition = "2024"
keywords = ["brickadia", "brdb", "brs", "msgpack-schema", "gamedev"]
license = "CC0-1.0"
license-file = "../../LICENSE"
readme = "README.md"
repository = "https://github.com/brickadia-community/brdb.git"
rust-version = "1.88"

[dependencies]
